<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp">

   <ImageView
       android:id="@+id/profile_image_view"
       android:layout_width="160dp"
       android:layout_height="160dp"
       android:background="@drawable/circular_bar"
       android:backgroundTint="@color/my_primary"
       android:src="@drawable/user_icon"
       android:scaleType="centerCrop"
       android:layout_marginBottom="40dp"
       android:contentDescription="@string/person_icon_description" />

    <EditText
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:enabled="false"
        android:padding="10dp"
        android:importantForAutofill="no"
        android:textColorHint="#757575"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <Button
            android:id="@+id/profile_update_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/update_btn"
            android:background="@drawable/btn_rounded_corner"/>
        <!-- ИНДИКАТОР ЗАГРУЗКИ -->
        <ProgressBar
            android:id="@+id/profile_progress_bar"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/my_primary"
            android:layout_gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>


</LinearLayout>