<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:weightSum="100"
    tools:context=".login.LoginOtpActivity">

    <!-- ВЕРХНИЙ БЛОК -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bar"
            android:backgroundTint="@color/gray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/first_step"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bar"
            android:backgroundTint="@color/my_primary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/second_step"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bar"
            android:backgroundTint="@color/gray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/third_step"/>
        </RelativeLayout>
    </LinearLayout>
    <!-- КОНЕЦ ВЕРХНЕГО БЛОКА -->

    <!-- ВТОРОЙ БЛОК -->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/otp_icon"
        app:tint="@color/my_primary"
        android:layout_weight="20"
        android:importantForAccessibility="no"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:layout_gravity="center_vertical"
        android:letterSpacing="0.08"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">


        <EditText
            android:id="@+id/login_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:hint="@string/otp"
            android:inputType="number"
            android:maxLength="6"
            android:minHeight="48dp"
            android:padding="10dp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <!-- КОНЕЦ ВТОРОГО БЛОКА -->


    <!-- НИЖНИЙ БЛОК -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <Button
            android:id="@+id/login_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/next"
            android:background="@drawable/btn_rounded_corner"/>
        <!-- ИНДИКАТОР ЗАГРУЗКИ -->
        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/my_primary"
            android:layout_gravity="center"/>
    </LinearLayout>
    <!-- КОНЕЦ НИЖНЕГО БЛОКА -->

    <TextView
        android:id="@+id/resend_otp_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resend_otp"/>

</LinearLayout>