<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:weightSum="100"
    tools:context=".LoginPhoneNumberActivity">

    <!-- ВЕРХНИЙ БЛОК -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bar"
            android:backgroundTint="@color/my_primary"
            tools:ignore="TextSizeCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/first_step"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bar"
            android:backgroundTint="@color/gray"
            tools:ignore="TextSizeCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/second_step"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bar"
            android:backgroundTint="@color/gray"
            tools:ignore="TextSizeCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/third_step"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
    </LinearLayout>
    <!-- КОНЕЦ ВЕРХНЕГО БЛОКА -->

    <!-- ВТОРОЙ БЛОК -->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/phone_icon"
        app:tint="@color/my_primary"
        android:layout_weight="20"
        android:contentDescription="@string/phone_icon_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone"
        android:layout_gravity="center_vertical"
        android:letterSpacing="0.08"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">
        
        <com.hbb20.CountryCodePicker
            android:id="@+id/login_country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:ccp_defaultNameCode="RU"/>

        <EditText
            android:id="@+id/login_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:hint="@string/phone_hint"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <!-- КОНЕЦ ВТОРОГО БЛОКА -->


    <!-- НИЖНИЙ БЛОК -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <Button
            android:id="@+id/send_otp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/next"
            android:background="@drawable/btn_rounded_corner"/>
     <!-- ИНДИКАТОР ЗАГРУЗКИ -->
        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/my_primary"
            android:layout_gravity="center" />
</LinearLayout>
    <!-- КОНЕЦ НИЖНЕГО БЛОКА -->

</LinearLayout>