<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchUserActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_primary"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_user"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/back_btn"/>

        <ImageButton
            android:contentDescription="@string/back_btn_description"
            android:id="@+id/back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icon_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/white"
            android:layout_centerVertical="true" />

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/search_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/search_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/search_user_btn"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="4dp"
            android:hint="@string/username"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#757575"
            tools:ignore="TextFields"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/search_user_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/search_button_description"
            android:padding="10dp"
            android:src="@drawable/search_icon"
            app:tint="@color/my_primary"
            tools:ignore="TouchTargetSizeCheck" />
        
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_user_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_user_layout"
        android:padding="10dp"/>


</RelativeLayout>